added get paket details by id
