# src/routes/Catering.ts
@@ -11,6 +11,7 @@ import {
   addPaketWithSchedules,
   searchCatering,
   deletePaket,
+  getPaketById,
 } from '../handlers/cateringHandlers';
 import { userMiddleware } from '../middleware/UserMiddleware';
 
@@ -19,6 +20,8 @@ const router = express.Router();
 router.post('/', userMiddleware, createCatering);
 router.get('/', getAllCaterings);
 router.get('/:cateringId', getCateringById);
+router.get('/paket/:paketId', getPaketById);
+
 router.put('/:cateringId', jwtMiddleware, isOwnerMiddleware, updateCatering);
 router.delete('/:cateringId', jwtMiddleware, isOwnerMiddleware, deleteCatering);
 router.post('/:cateringId/schedules', jwtMiddleware, isOwnerMiddleware, addScheduleAndFood);
